<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="gConstants" Id="{bea46d56-5306-44a3-9987-d5c47aa9c7cb}">
    <Declaration><![CDATA[{attribute 'Tc2GvlVarNames'}
//{warning 'CONVERSION MESSAGE: This text contained unprintable characters, that have been deleted'.}
VAR_GLOBAL CONSTANT

	(* sub-folders for  directory *)
	cSYSTEM_FOLDER_LIMIT				: INT :=20;

	(*cBASE_FOLDER_ARR					: ARRAY[1..cSYSTEM_FOLDER_LIMIT] OF T_FolderName :=[
			(*01*)'Bridge\',	(*02*)'Bridge\Archive\',	(*03*)'Bridge\Restore\',
			(*04*)'CAC\',		(*05*)'CAC\Archive\',		(*06*)'CAC\Error\',	(*07*)'CAC\Restore\', 	(*08*)'CAC\Restore\Archive\',
			(*09*)'CHM\',		(*10*)'CHM\Archive\',		(*11*)'CHM\Error\',	(*12*)'CHM\OK\',		(*13*)'CHM\Commissioning_Mode\',
			(*14*)'HMI\',
			(*15*)'KPI\',		(*16*)'KPI\Archive\',		(*17*)'KPI\Shift\',	(*18*)'KPI\ProdOrder\',
			(*19*)'OAC\',		(*20*)'OAC\Error\',
			(*21*)'OCV\',		(*22*)'OCV\Error\',
			(*23*)'OHM\',		(*24*)'OHM\Archive\',		(*25*)'OHM\Error\',	(*26*)'OHM\OK\',		(*27*)'OHM\Pending\',
			(*28*)'PCM\',		(*29*)'PCM\Archive\',		(*30*)'PCM\Error\',	(*31*)'PCM\Incoming\',
			(*32*)'PAC\',
			(*33*)'PHM\',		(*34*)'PHM\Archive\',		(*35*)'PHM\Error\',	(*36*)'PHM\OK\',
			(*37*)'Settings\',	(*38*)'Settings\Backups\',
			(*39*)'Templates\',
			(*40*)'Orca\',
			(*41*)'SystemLog\',
			(*42*)'Cameras\',
			(*43*)'ArchiveDB\'];*)
			
cMETS_CORE_FOLDERS					: ARRAY[1..cSYSTEM_FOLDER_LIMIT] OF T_FolderName :=[
			(*01*)'CHM\',		(*02*)'CHM\Archive\',		(*03*)'CHM\Error\',		(*04*)'CHM\OK\',		(*05*)'CHM\Commissioning_Mode\',	(*06*)'CHM\Restore\',
			(*07*)'PCM\',		(*08*)'PCM\Archive\',		(*09*)'PCM\Error\',		(*10*)'PCM\Incoming\',
			(*11*)'Settings\',	(*12*)'Settings\Backups\',	(*13*)'Settings\Recipe\',
			(*14*)'Cameras\',
			(*15*)'Printers\',	(*16*)'Printers\Templates'];
			
cMETS_AUX_FOLDERS					: ARRAY[1..cSYSTEM_FOLDER_LIMIT] OF T_FolderName :=[
			(*01*)'CAC\',		(*02*)'CAC\Archive\',		(*03*)'CAC\Error\',		(*04*)'CAC\Restored\',
			(*05*)'OAC\',		(*06*)'OAC\Error\',			(*07*)'OAC\Empty\',
			(*08*)'OCV\',		(*09*)'OCV\Error\',			(*10*)'OCV\Empty\',
			(*11*)'SystemLog\',
			(*12*)'ArchiveDB\',
			(*13*)'BridgeApp\Bridge_Core\',
			(*14*)'LoggerApp\Service\',
			(*15*)'WebHMI\',
			(*16*)'DeleteArchiveTool\'];
			
			
	cME_ARCHIVE_ACTION 					: ARRAY[1..3] OF STRING :=[
			(*01*)'Archive', 	(*02*)'DeleteTime', 		(*03*)'DeleteItem'] ;

	cMAX_HMI_DISPLAYS					: INT:=2;
	cMAX_HMI_SERIALCODE_LENGHT			: INT := 33;

	cDISABLE_LOG						: BOOL := FALSE;
	cDISABLE_ALARMS						: BOOL := FALSE;
	cMAX_ALARM_GROUP					: T_PositiveINT:=7;
	cMAX_MESSAGE_NUMBER					: T_PositiveINT:=255;
	cMAX_DISPLAY_ALARMS					: T_PositiveINT := 100;

	cMAX_PACK_INFEED_QUEUE				: T_PositiveINT := 80;  (*IMPORTANT index needs to by grater than max value form aPackCodeMapping20*)
	cMAX_HMI_PACK_INFEED_QUEUE			: T_PositiveINT :=100;	(*must be FIXED 100 for HMI and bigger then cMAX_PACK_INFEED_QUEUE*)

	cMAX_INTERMEDIATE_CODE_QUEUE		: T_PositiveINT := 10;
	(*cMAX_TRACE_UNIT_QUEUE				: UINT := 5;
	cMAX_PACK_REJECTED_QUEUE			: UINT := 30;*)

	cMAX_PACKCODE_LENGHT				: T_PositiveINT := 60;
	cMAX_HMI_PACKCODE_LENGHT			: T_PositiveINT := 67;

	cMAX_PACKS_PER_OUTER				: T_PositiveINT :=10;
	cMAX_HMI_PACKS_PER_OUTER			: T_PositiveINT :=20;	(*must be FIXED 20 for HMI and bigger then cMAX_PACKS_PER_OUTER*)

	cMAX_OUTER_STATUS_QUEUE				: T_PositiveINT := 50;
	cMAX_INFEED_QUEUE					: T_PositiveINT :=100;

	cMAX_OUTERS_PER_CASE 				: T_PositiveINT := 70;
	cMAX_HMI_OUTERS_PER_CASE 			: T_PositiveINT := 100;	(*must be FIXED  100 for HM and bigger then cMAX_OUTERS_PER_CASE*)

	cMAX_PACK_PER_CASE 					: T_PositiveINT := 840;	(*must be cMAX_PACKS_PER_OUTER* cMAX_OUTERS_PER_CASE*)

	cMAX_SIDEFLEX_QUEUE					: T_PositiveINT :=10;
	cMAX_CASE_QUEUE						: T_PositiveINT :=4;
	cMAX_FAILED_CASE_QUEUE				: T_PositiveINT :=10;
	cMAX_VERIFIED_CASE_QUEUE			: T_PositiveINT :=10;
	cMAX_LAST_CASE_BARCODES				: T_PositiveINT := 10;

	cMAX_CHM_PACKID_LENGHT				: T_PositiveINT := 60;
	cMAX_CHM_OUTERID_LENGHT				: T_PositiveINT := 60;
	cMAX_CHM_CASEID_LENGHT				: T_PositiveINT := 25;

	cSHIFTNUMBER						: T_PositiveINT := 4;

	cCODE_OVERWIRTTEN					: STRING(12) := '************';
	cCASE_PACKER_REJECT					: STRING := 'CASE_REJECT_BY_CASEPACKER';
	cMAX_REJECT_REASON					: T_PositiveINT := 80;
	cXML_HEADER							: STRING :=   '<?xml version="1.0" encoding="utf-8"?>$R$N';

	cPARAMETER_STORAGE_SIZE				: T_PositiveINT := 25;	(*  *)


	cMAX_ETHERCAT_SLAVES				: T_PositiveINT := 63; 	(* tabel start with 0 and 64 elemnts *)
	cMAX_PNOZ_ELEMENTS					: T_PositiveINT := 20;
	cMAX_PROFINET_MASTERS	      		: T_PositiveINT := 2; 		(* Must always be set min to 2*)
	cMAX_PROFINET_DRIVES        		: T_PositiveINT := 8;		(* Must always be set min to 8*)
	cMAX_ANALOG_DRIVERS					: T_PositiveINT := 2; 		(* Must always be set min to 2*)
	cMAX_MC2_DRIVES						: T_PositiveINT := 2;
	cMAX_CYLINDERS						: T_PositiveINT := 12;		(*Must always be set min to 3*)
	cMAX_PRINTER_NUMBER           		: T_PositiveINT := 6;		(*Must always be set min to 6*)
	cMAX_HAND_SCANNERS					: T_PositiveINT := 2; 		(*Must always be set min to 2*)
	cMAX_CAMS							: T_PositiveINT := 1;
	cMAX_ENCODER						: T_PositiveINT := 1;
	cMAX_CAMERA_PROG_NUMBER				: T_PositiveINT := 5;
	cMAX_CAMERA_NUMBER					: T_PositiveINT :=12;		(*Must always be set min to 12*)
	cOUT_CAMERA_GROUP					: T_PositiveINT:=9;
	cCS_CAMERA_GROUP					: T_PositiveINT:=12;
	cPLAS_CAMERA_OFF_DELAY				: TIME:= T#10S;

	cDOT_CHAR 							: T_Char := '.';
	cTAB_CHAR 							: T_Char := '$09';
	cLF_CHAR 							: T_Char := '$0A';
	cCR_CHAR							: T_Char := '$0D';

	cHALF_SECOND						: TIME := t#0.5s;
	cONE_SECOND							: TIME := T#1s;
	cTWO_SECONDS						: TIME := T#2s;
	cTHREE_SECONDS						: TIME := T#3s;
	cFIVE_SECONDS						: TIME := t#5s;
	cTEN_SECONDS						: TIME := t#10s;

	cONE_MINUTE							: TIME := t#1m;
	cFIVE_MINUTES						: TIME := T#5m;
	cONE_HOUR							: TIME := T#1h;

	(* File handling *)
	cFAILED_INVALID_INDEX_GROUP			: DWORD :=  16#702;
	cFAILED_INVALID_INDEX_OFFSET		: DWORD :=  16#703;
	cFAILED_OBJECT_NOT_FOUND			: DWORD :=  16#70C;
	cFAILED_OBJECT_ALREADY_EXIST		: DWORD :=  16#70F;
	cFAILED_NO_MORE_FILE_HANDLES		: DWORD :=  16#716;
	cFAILED_ACCESS_DENIED				: DWORD :=  16#723;
	
	(* File handling *)
	//cFAILED_INVALID_DATA				: DWORD :=  16#703;
	//cFAILED_FILE_NOT_FOUND			: DWORD :=  16#70C;
	//cFAILED_NO_MORE_FILE_HANDLES		: DWORD :=  16#716;
	cMAX_FILE_BUFFER					: T_PositiveINT := 32767;(*10000;*)

	cNUMBER_DEFINED_AI_TYPES			: T_PositiveINT :=14;
	cMAX_VALIDATION_ITEMS				: T_PositiveINT :=10;

	(*cUSE_INTERMEDIATE_BARCODE_VALIDATION	: BOOL := TRUE;*)

	cMAX_CAMERA_TYPES					: T_PositiveINT :=15;

	cACQUISITION_TIMER					: ARRAY[0..cMAX_CAMERA_TYPES] OF TIME :=[
			(*Number of array elemnts must match to number of elemnts in E_SCANNER_DeviceType*)
			(*E_MV_None*)T#0ms,
			(*E_MV_420_FULL*)T#26ms,			(*E_MV_420_HALF*)T#12ms,
			(*E_MV_440SR_FULL*)T#18ms, 		(*E_MV_440SR_HALF*)T#12ms,
			(*E_MV_440HR_FULL*)T#52ms, 		(*E_MV_440HR_HALF*)T#30ms,
			(*E_MV_440UR_FULL*)T#50ms, 		(*E_MV_440UR_HALF*)T#33ms,
			(*E_MV_540S_FULL*)T#24ms, 			(*E_MV_540S_HALF*)T#12ms,
			(*E_MV_540H_FULL*)T#24ms, 			(*E_MV_540H_HALF*)T#12ms,
			(*E_MV_560U_FULL*)T#24ms, 			(*E_MV_560U_HALF*)T#12ms,
			(*E_V_430F_FULL*)T#18ms];


END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>